# OpenList-Desktop

./: .gitignore  OpenList-Desktop.py  README.md  README.zh-CN.md  README_en.md  deploy.py  deploy_pyinstaller.py  pyproject.toml  requirements.txt
.github/workflows/: build-Windows.yml  build-macOS-Apple.yml  build-macOS-Intel.yml
app/common/: application.py  auto_startup.py  config.py  logger.py  resource.py  setting.py  signal_bus.py  style_sheet.py  utils.py
app/components/: add_mount_dialog.py  admininfo_dialog.py  alist_parameter_dialog.py  empty_state_widget.py  first_mount_tip_dialog.py  github_proxy_dialog.py  github_token_dialog.py  link_buttons_card.py  loading_dialog.py  markdown_messagebox.py  mount_card.py  myinfobar.py  proxy_setting_card.py  rclone_log_dialog.py  rclone_parameter_dialog.py  system_tray_icon.py  systemcolor_settingcard.py  update_assetdialog.py  webdav_account_dialog.py
app/resource/: resource.qrc
app/resource/images/: logo.icns
app/services/: alist_service.py  rclone_manager.py  update_service.py
app/view/: about_interface.py  home_interface.py  main_window.py  mount_interface.py  setting_interface.py
config/: config.json
