[project]
name = "openlist-desktop"
version = "0.1.0"
description = ""
authors = [
    {name = "qianye216",email = "qianye@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11.9,<3.13"
dependencies = [
    "pyside6-fluent-widgets (==1.8.3)",
    "pyside6 (==6.6.2)",
    "psutil (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "markdown2 (>=2.5.3,<3.0.0)",
    "pyinstaller (>=6.14.1,<7.0.0)",
    "darkdetect (>=0.8.0,<0.9.0)",
    "nuitka (>=2.7.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
